[package]
name = "attestation-tenant"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>"]
edition = "2018"

[dependencies]
sgx-isa = { version = "0.3.1", features = ["sgxstd"] }
# dcap-ql = "0.2.0"
openssl = "0.10.23"
hex = "0.3.1"
ascii = "1.0"
percent-encoding = "2.1.0"
failure = "0.1.5"
bufstream = "0.1.4"
serde_json = "1.0.40"

[dependencies.dcap-ql]
version = "0.2.0"
features = ["serde_support"]
